<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnLogear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8ACF39">

    <ImageView
        android:id="@+id/imgVerificatedUser"
        android:layout_width="101dp"
        android:layout_height="103dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/navheader_contentDescr"
        android:src="@drawable/ic_userverificed" />

    <TextView
        android:id="@+id/txtvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activityname_Login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="243dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/activityname_edtUserName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="326dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/activityname_edtPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="414dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/activityname_btnIniciarSesion" />
</RelativeLayout>